// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StructureItem > Snapshots > renders the component with all properties filled in 1`] = `
<label
  class="
    mb-4
    pointer
    structure-item
    w-100
  "
  for="modified-unique-id"
  id="modified-unique-id-label"
>
  <input
    checked=""
    id="modified-unique-id"
    name="Modified group name"
    type="radio"
    value="modified-value"
  />
  <span class="
    bg-ap-blue-lighten-3
    d-flex
    flex-column
    hover-style
    pa-4
    rounded
    selected-border
    w-100
  ">
    <!-- v-if -->
    <span class="
      align-md-center
      d-flex
    ">
      <amelipro-icon-stub
        bordered="true"
        class="mr-4"
        icon="localisation"
        iconbgcolor="ap-white"
        iconcolor="#01B9F5"
        large="false"
        medium="false"
        small="false"
        uniqueid="modified-unique-id-icon"
        widthauto="false"
        xlarge="true"
      ></amelipro-icon-stub>
      <span
        class="
          align-md-center
          d-flex
          flex-column
          flex-md-row
          justify-md-space-between
          w-100
        "
        id="modified-unique-id-structure-infos"
      >
        <b>
          modified-address
        </b>
        <span>
          <!-- v-if -->
          AM/FINESS : modified-unique-id-number
        </span>
      </span>
    </span>
  </span>
</label>
`;

exports[`StructureItem > Snapshots > renders the component with only required properties filled in 1`] = `
<label
  class="
    mb-4
    pointer
    structure-item
    w-100
  "
  for="required-unique-id"
  id="required-unique-id-label"
>
  <input
    id="required-unique-id"
    name="Required group name"
    type="radio"
    value="required-value"
  />
  <span class="
    bg-ap-grey-lighten-4
    d-flex
    flex-column
    hover-style
    pa-4
    rounded
    w-100
  ">
    <!-- v-if -->
    <span class="
      align-md-center
      d-flex
    ">
      <amelipro-icon-stub
        bordered="true"
        class="mr-4"
        icon="localisation"
        iconbgcolor="ap-white"
        iconcolor="#01B9F5"
        large="false"
        medium="false"
        small="false"
        uniqueid="required-unique-id-icon"
        widthauto="false"
        xlarge="true"
      ></amelipro-icon-stub>
      <span
        class="
          align-md-center
          d-flex
          flex-column
          flex-md-row
          justify-md-space-between
          w-100
        "
        id="required-unique-id-structure-infos"
      >
        <b>
          required-address
        </b>
        <span>
          <!-- v-if -->
          AM/FINESS : required-unique-id-number
        </span>
      </span>
    </span>
  </span>
</label>
`;

exports[`StructureItem > render correctly 1`] = `
<label
  class="
    mb-4
    pointer
    structure-item
    w-100
  "
  for="my-item-id"
  id="my-item-id-label"
>
  <input
    id="my-item-id"
    name="group-name"
    type="radio"
    value="valeur"
  />
  <span class="
    bg-ap-grey-lighten-4
    d-flex
    flex-column
    hover-style
    px-2
    px-sm-4
    py-2
    rounded
    w-100
  ">
    <!-- v-if -->
    <span class="
      align-md-center
      d-flex
    ">
      <span
        class="
          amelipro-icon
          mr-4
        "
        id="my-item-id-icon"
      >
        <span
          aria-hidden="true"
          class="
            amelipro-custom-icon
            custom-color
            x-large
          "
          focusable="false"
          role="img"
          style="color: #01B9F5; border-radius: 50%; border: 1px solid #01B9F5;"
        >
          <span>
            <svg
              aria-hidden="true"
              style="enable-background:new 0 0 60 60;"
              version="1.1"
              viewBox="0 0 60 60"
              x="0px"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
              y="0px"
            >
              <circle
                class="circle-color"
                cx="30"
                cy="30"
                r="30"
              />
              <path
                class="shape-color"
                d="M30,30.5c-2.7,0-4.8-2.2-4.8-4.8c0-2.7,2.1-4.9,4.8-4.9c2.7,0,4.8,2.2,4.8,4.9C34.8,28.3,32.7,30.5,30,30.5L30,30.5z M30,15c-5.9,0-10.6,4.8-10.6,10.7c0,5.6,4.8,12.7,8,16.2C28.6,43.2,30,45,30,45s1.5-1.8,2.8-3.1c3.1-3.4,7.8-10.2,7.8-16.2C40.6,19.8,35.9,15,30,15z"
              />
            </svg>
          </span>
        </span>
      </span>
      <span
        class="
          align-md-center
          d-flex
          flex-column
          flex-md-row
          justify-md-space-between
          w-100
        "
        id="my-item-id-structure-infos"
      >
        <b>
          address
        </b>
        <span>
          <!-- v-if -->
          AM/FINESS : 1
        </span>
      </span>
    </span>
  </span>
</label>
`;
